<resources>
    <string name="app_name">Spellbook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HEADER_TEXT">You Have Opened the Spellbook!</string>
    <string name="MAIN_SEARCH_BUTTON">Search Spells</string>
    <string name="SEARCH_HEADER">Choose your spells!</string>
    <string name="SPELL_NAME">SPELL NAME</string>
    <string name="SPELL_LEVEL">SPELL LEVEL</string>
    <string name="SPELL_Ritual">SPELL RITUAL</string>
    <string name="SPELL_DETAIL_NAME">SPELL NAME</string>
    <string name="SPELL_DETAIL_CASTING_TIME"><![CDATA[<b>Casting Time:</b>]]> %1s</string>
    <string name="SPELL_DETAIL_RANGE"><![CDATA[<b>Range:</b>]]> %1s</string>
    <string name="SPELL_DETAIL_LEVEL">LEVEL</string>
    <string name="SPELL_DETAIL_SCHOOL">SCHOOL</string>
    <string name="SPELL_DETAIL_RITUAL">RITUAL</string>
    <string name="SPELL_DETAIL_COMPONENTS"><![CDATA[<b>Components:</b>]]> %1s</string>
    <string name="SPELL_DETAIL_DURATION"><![CDATA[<b>Duration:</b>]]> %1s</string>
    <string name="SPELL_DETAIL_DESCRIPTION">DESCRIPTION</string>
    <string name="ADD_TO_SPELLBOOK">ADD TO SPELLBOOK</string>
    <string name="CHANGE_TEXT">Change Text!</string>
    <string name="search_text">Search</string>
</resources>
