<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cgrahams.spellbook.ui.SpellDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_above="@+id/addToSpellbookButton"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/spellDetailName"
                android:text="@string/SPELL_DETAIL_NAME"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/spellDetailLevel"
                    android:text="@string/SPELL_DETAIL_LEVEL"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/spellDetailSchool"
                    android:text="@string/SPELL_DETAIL_SCHOOL"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/spellDetailRitual"
                    android:text="@string/SPELL_DETAIL_RITUAL"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/spellDetailCastingTime"
                android:text="@string/SPELL_DETAIL_CASTING_TIME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spellDetailRange"
                android:text="@string/SPELL_DETAIL_RANGE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spellDetailComponents"
                android:text="@string/SPELL_DETAIL_COMPONENTS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spellDetailDuration"
                android:text="@string/SPELL_DETAIL_DURATION"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spellDetailDescription"
                android:text="@string/SPELL_DETAIL_DESCRIPTION"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/addToSpellbookButton"
            android:text="@string/ADD_TO_SPELLBOOK"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</FrameLayout>
