<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/spellNameTextView"
        android:text="@string/SPELL_NAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/spellLevelTextView"
        android:text="@string/SPELL_LEVEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spellNameTextView"/>

    <TextView
        android:id="@+id/spellRitualTextView"
        android:text="@string/SPELL_Ritual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignBaseline="@+id/spellLevelTextView"
        android:layout_alignBottom="@+id/spellLevelTextView"
        android:layout_toRightOf="@+id/spellLevelTextView"
        android:layout_toEndOf="@+id/spellLevelTextView" />

</RelativeLayout>